--- a/app/views/books/_review_form.html.erb
+++ b/app/views/books/_review_form.html.erb
@@ -46,7 +46,7 @@
   </div>
   <div class="text-right">
     <small>
-      送信した評定は、本人の承認後に公開されます。
+      送信した評価は、本人の承認後に公開されます。
     </small>
   </div>
 </div>
