--- a/app/views/books/check.html.erb
+++ b/app/views/books/check.html.erb
@@ -1,12 +1,12 @@
 <section class="page-heading mb-4">
   <h1 class="page-heading__title">
-    <%= @book.user.name %>さんへの新着の評定
+    <%= @book.user.name %>さんへの新着の評価
   </h1>
 </section>
 <section class="page-section mb-4">
   <div class="mb-3">
     <p class="page-section__text">
-      承認した評定のみが公開されます。
+      承認した評価のみが公開されます。
     </p>
   </div>
   <% if @unchecked_reviews.present? %>
