--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -44,13 +44,13 @@
         「コンテンツ」とは、当団体又はユーザーが本サービスを利用して投稿又は送信するコンテンツを意味します。
       </li>
       <li class="policy__text">
-        「評定」とは、コンテンツの一種で、個人が個人を評価した結果を送信したコンテンツを意味します。
+        「評価」とは、コンテンツの一種で、個人が個人を評価した結果を送信したコンテンツを意味します。
       </li>
       <li class="policy__text">
-        「評定募集者」とは、自身に関しての評定を募集する個人のことを指します。
+        「評価募集者」とは、自身に関しての評価を募集する個人のことを指します。
       </li>
       <li class="policy__text">
-        「評定送信者」とは、個人に対して評定を送信した個人のことを指します。
+        「評価送信者」とは、個人に対して評価を送信した個人のことを指します。
       </li>
     </ol>
     <li class="policy__text">
