--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,7 +6,7 @@
 <section class="page-section mb-4">
   <div class="mb-3">
     <p class="page-section__text">
-      一度承認した評定に対してコメント / 削除ができます。
+      一度承認した評価に対してコメント / 削除ができます。
     </p>
   </div>
 
