--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,9 +3,9 @@
 <% if user_signed_in? && @user.id == current_user.id %>
   <section class="page-heading mb-4">
     <h1 class="page-heading__title mb-4">
-      多くの人にシェアして<br>評定を書いてもらおう！
+      多くの人にシェアして<br>評価を書いてもらおう！
     </h1>
-    <%= link_to "評定を募集する！", books_show_twitter_share_url(@user), class: "btn btn-service btn-round btn-lg shadow-sm", target: '_blank' %>
+    <%= link_to "評価を募集する！", books_show_twitter_share_url(@user), class: "btn btn-service btn-round btn-lg shadow-sm", target: '_blank' %>
   </section>
 <% else %>
   <section class="mb-4">
