--- a/app/views/shared/_top_navbar.html.erb
+++ b/app/views/shared/_top_navbar.html.erb
@@ -25,7 +25,7 @@
           <ul class="navbar-nav">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to "新着の評定", check_book_path(current_user.book), data: {turbolinks: false}, class: "nav-link pl-0" %>
+                <%= link_to "新着の評価", check_book_path(current_user.book), data: {turbolinks: false}, class: "nav-link pl-0" %>
               </li>
               <li class="nav-item">
                 <%= link_to "友達の通信簿", reviewed_books_path, data: {turbolinks: false}, class: "nav-link pl-0" %>
