--- a/app/views/books/_index_contents.html.erb
+++ b/app/views/books/_index_contents.html.erb
@@ -12,7 +12,7 @@
                 <i class="<%= review_type_symbol(book.checked_review(0)) %>"></i><%= book.checked_review(0).content %>
               </span>
             <% else %>
-              <span class="book-thumbnail__text book-thumbnail__text--first">
+              <span class="book-thumbnail__text book-thumbnail__text--first text-center">
                 まだ評価は届いていないようです。<br>一番乗りで評価を送ろう！
               </span>
             <% end %>
