--- a/app/views/books/_review_form.html.erb
+++ b/app/views/books/_review_form.html.erb
@@ -20,7 +20,7 @@
   </div>
 </div>
 <div class="review-form sp-full-width">
-  <div class="review-form__container">
+  <div class="review-form__container pb-2">
     <p class="review-form__label review-form__label--bad">
       <i class="far fa-sad-cry fa-lg mr-2"></i>ココがいまひとつ！
     </p>
