--- a/app/assets/stylesheets/bases/_shared.scss
+++ b/app/assets/stylesheets/bases/_shared.scss
@@ -32,6 +32,7 @@
     padding-right: 15px;
     padding-left: 15px;
     border-top: solid 3px $original-light-gray;
+    text-align: center;
   }
 
   &__subtitle {
