show total count

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,7 +2,7 @@
   Admin User一覧
 </h1>
 <h3>
-  User <%= @users.count %>人
+  User <%= @all_users.count %>人
 </h3>
 <h3>
   Review <%= @reviews.count %>個
