--- a/app/views/books/reviewed.html.erb
+++ b/app/views/books/reviewed.html.erb
@@ -3,9 +3,9 @@
     友達の通信簿
   </h1>
 </section>
-<section class="mb-4">
-  <%= render partial: "books/index_tabs" %>
-</section>
+<!--<section class="mb-4">-->
+  <%#= render partial: "books/index_tabs" %>
+<!--</section>-->
 <section class="mb-4">
   <%= render partial: "books/index_contents", locals: { books: @books } %>
 </section>
